cabal-version:      2.4
name:               hsidoc
version:            0.1.0.0
synopsis:           Construct the diagrams used to document HSI

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch

-- A copyright notice.
-- copyright:
category:           Documentation
extra-source-files: CHANGELOG.md

library libhsidoc
    exposed-modules:  DiagramsTutorial
                      TriangleTemplate,
                      TriangleHasse,
                      TriangleGeom,
                      Hasse,
                      Postorder,
                      PostorderMultiple,
                      PostorderSingle,
                      Preorder,
                      PreorderMultiple,
                      PreorderSingle,
                      Halfspace,
                      Intersect,
                      HsiExamples,
                      Algo01,
                      Algo02,
                      Algo02G,
                      Algo02H,
                      Algo03,
                      Algo03G,
                      Algo03H


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.16.1.0,
                      diagrams-core,
                      diagrams-lib,
                      diagrams-svg,
                      diagrams-contrib,
                      diagrams-input,
                      colour,
                      containers,
                      system-filepath

    hs-source-dirs:   src
    default-language: Haskell2010

executable hsidoc
    main-is:          Main.hs
    -- other-modules:

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      libhsidoc,
                      diagrams-core,
                      diagrams-lib,
                      diagrams-svg,
                      diagrams-contrib,
                      containers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:         -Wall

